--- a/src/components/application/application.css
+++ b/src/components/application/application.css
@@ -1,12 +1,14 @@
 .application-page{
-    min-height: 100vh;
+    min-height: 120vh;
     padding-top: 5%;
-    padding-left: 38%;
-    padding-right: 40%;
-    background-image: url(/home/praveen/Desktop/myapp/src/components/images/back.jpg);
+    padding-left: 20%;
+    padding-right: 20%;
+    background-image: url(../images/back.jpg);
     background-size: cover;
-    margin: 0 auto;
-   
+    display: 100%;
+  }
+  .application-content{
+    position: absolute;
   }
   .application-title{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -16,21 +18,21 @@
     padding-top: 20px;
   }
   .application-form{
-   width: 350px;
+   width: 800px;
    background-color:rgb(97, 29, 86);
-   height: 480px;
+   height: 550px;
    float: left;
    position: relative;
    border-radius: 25px;
    box-shadow: inset 0 0 15px rgb(0, 0, 0);
-  
+   margin: 0% auto;
   }
   .application-register{
     background-color:rgb(97, 29, 86);
     padding-left: 15%;
     padding-right: 25%;
-    height: 360px;
-    width: 300px;
+    height: 400px;
+    width: 700px;
     margin: 0 auto;
     margin-top: 20px;
     padding-top: 20px;
@@ -38,29 +40,31 @@
     border-radius: 25px;
     box-shadow:  inset 0 0 15px rgb(0, 0, 0);
   }
-  .form-group{
+  .application-group{
     background-color: rgb(0, 0, 0);
     height: 30px;
-    width: 200px;
+    width: 500px;
     border-radius: 30px;
     text-align: center;
     box-shadow:  0 0 15px rgb(0, 0, 0);
   }
-  .form-group input{
+  .application-group input{
     border: none;
-    width: 160px;
+    width: 400px;
     height:25px ;
     border-radius: 30px;
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
   }
-  .form-group input :placeholder{
-   text-emphasis-color:   rgb(0, 0, 0);
+  .application-group input[type="file"]{
+    display: none;
   }
-  .form-group input :hover{
+  .bd {
     background-color: rgb(0, 0, 0);
-    border: none;
+    color: rgb(255, 255, 255);
+    float: left;
+    margin-left:45px ;
   }
   .button{
     border-radius: 20px;
