--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -1,20 +1,118 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 .home-page{
     min-height: 120vh;
-    background-image:url(../images/home.png);
-    background-color: rgb(105, 17, 177); 
+    background-color: rgb(255, 255, 255);
     display: 100%;
+   
   }
-.home-text{
-    margin: 0 auto;
-    padding: 40px
-  }
-  .home-text h1 {
-    color: yellow;
-    font-family: cursive;
-    font-size: 35px;
-  }
-  .home-text p{
-    font-size: 25px;
-    color:white;
-  }
+.home{
+  margin-left: 62px;
+  margin-right: 45px;
+  width: 1250px;
+  justify-content: center;
+  
+}
+.image-text{
+  text-align: center;
+  margin-top: -200px;
+  
+}
+.image-text h1 {
+  color: rgb(255, 255, 255);
+  font-family:sans-serif ; 
+  font-weight: bolder;
+}
+.image-text h2 {
+  color: rgb(255, 255, 255);
+  font-family:sans-serif ; 
+  font-weight: bolder;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.text2{
+  margin-top: 100px;
+}
+.text2 h1{
+  font-size: 30px;
+  text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: 800;
+  color:rgb(121, 15, 115) ;
+}
+.our-services-but{
+  margin-top: 40px;
+  height: 70px;
+  width: 200px;
+  font-size: 20px;
+  text-align: center;
+  border-color:rgb(121, 15, 115); 
+  color: rgb(121, 15, 115);
+  background-color: white;
+}
+input.our-services-but:hover{
+  background-color: rgb(121, 15, 115);
+  color: rgb(255, 255, 255);
+}
+.ser ul li {
+  display: flex;
+  display: inline-block;
+  padding: 35px;
+}
+.salon{
+  width: 570px;
+  height: 350px;
+  margin-left: -20px;
+ 
+}
+.ser h1{
+  font-size: 30px;
+  margin-top: 15px;
+  text-align: center;
+  font-family:Arial, Helvetica, sans-serif;
+  color: rgb(121, 15, 115);
+}
+
+.ser a{
+  text-decoration: none;
+  color:rgb(121, 15, 115) ;
+  font-size: 23px;
+  font-family: serif;
+  cursor: pointer;
+}
+.appo{
+  height: 40px;
+  width: 500px;
+  text-align: center;
+  color: rgb(121, 15, 115);
+  border-color:rgb(121, 15, 115) ;
+  background-color: white;
+}
+input.appo:hover{
+  color: rgb(250, 250, 250);
+  background-color: rgb(121, 15, 115);
+}
+.team-div ul li{
+  text-decoration: none;
+  display: inline-block;
+  padding: 45px;
+  font-family: sans-serif;
+}
+.team{
+  height:200px;
+  width: 180px;
+  transition: transform 0.2s;
+ 
+}
+.mem:hover {
+  transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+.mem h3{
+  font-size: 20px;
+  margin-top: 15px;
+  font-weight: bold;
+  color:rgb(121, 15, 115) ;
+}
+.team-div h1{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+  font-weight: bolder;
+  color: rgb(121, 15, 115);
+}
