--- a/src/components/application/application.css
+++ b/src/components/application/application.css
@@ -1,7 +1,5 @@
 .application-page{
-    min-height: 120vh;
-    background-image: url(../images/back.jpg);
-    background-size: cover;
+    min-height: 240vh;
     display: 100%;
     margin: 0%;
     padding: 0%;
@@ -10,23 +8,21 @@
     position: absolute;
     margin: auto;
     margin-top: 5%;
-    margin-left: 20%;
-    
+    margin-left: 20%;  
   }
   .application-title{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding-top: 20px;
   }
   .application-form{
    width: 800px;
    background-color:rgb(97, 29, 86);
-   height: 550px;
+   height: 500px;
    float: left;
    position: absolute;
-   border-radius: 25px;
    box-shadow: inset 0 0 15px rgb(0, 0, 0);
    margin: 0% auto;
    position: relative;
@@ -35,20 +31,18 @@
     background-color:rgb(97, 29, 86);
     padding-left: 15%;
     padding-right: 25%;
-    height: 400px;
+    height: 450px;
     width: 700px;
     margin: 0 auto;
     margin-top: 20px;
     padding-top: 20px;
     padding-bottom: 15px;
-    border-radius: 25px;
     box-shadow:  inset 0 0 15px rgb(0, 0, 0);
   }
   .application-group{
     background-color: rgb(0, 0, 0);
     height: 30px;
     width: 500px;
-    border-radius: 30px;
     text-align: center;
     box-shadow:  0 0 15px rgb(0, 0, 0);
   }
@@ -56,7 +50,6 @@
     border: none;
     width: 400px;
     height:25px ;
-    border-radius: 30px;
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
@@ -93,4 +86,13 @@
   .application-group input[type="date"] label{
     display: none;
   }
-  
+  .application-forme{
+    width: 800px;
+    background-color:rgb(97, 29, 86);
+    height: 600px;
+    float: left;
+    position: absolute;
+    box-shadow: inset 0  0 15px rgb(0, 0, 0);
+    position: relative;
+    
+   }
