--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,9 +1,7 @@
 .login-page{
-  min-height: 100vh;
+  min-height: 40vh;
   padding-top: 5%;
-  padding-left: 38%;
-  padding-right: 40%;
-  background-image: url(../images/back.jpg);
+  background-color: white;
   background-size: cover;
   margin: 0 auto;
   }
@@ -11,36 +9,37 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding-top: 20px;
   }
   .login-form{
-   width: 350px;
+   width: 330px;
    background-color:rgb(97, 29, 86);
-   height: 300px;
+   height: 400px;
    float: left;
    position: relative;
-   border-radius: 25px;
    box-shadow: inset 0 0 15px rgb(0, 0, 0);
+   margin-left: 48%;
+   margin-top: -470px;
   
   }
   .login-register{
     background-color:rgb(97, 29, 86);
     padding-left: 15%;
     padding-right: 25%;
-    height: 180px;
-    width: 300px;
+    height: 230px;
+    width: 280px;
     margin: 0 auto;
     padding-top: 20px;
     padding-bottom: 15px;
-    border-radius: 25px;
+
     box-shadow:  inset 0 0 15px rgb(0, 0, 0);
   }
   .formgroup{
     background-color: rgb(0, 0, 0);
     height: 30px;
     width: 200px;
-    border-radius: 30px;
+    margin-top: 15px;
     text-align: center;
     box-shadow:  0 0 15px rgb(0, 0, 0);
   }
@@ -48,7 +47,7 @@
     border: none;
     width: 160px;
     height:25px ;
-    border-radius: 30px;
+ 
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
@@ -80,4 +79,10 @@
     text-align: center;
     padding-left: 50px;
   }
-  
+  .logim{
+    width:310px;
+    height: 400px;
+    margin-top: 45px;
+    margin-left: 24%;
+    opacity:0.8;
+  }
