--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -1,47 +1,44 @@
 .signup-page{
-  min-height: 100vh;
+  min-height: 120vh;
   padding-top: 5%;
-  padding-left: 38%;
-  padding-right: 40%;
-  background-image: url(../images/back.jpg);
-  background-size: cover;
+  background-color: rgb(255, 255, 255);
   margin: 0 auto;
   }
   .signup-title{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding-top: 20px;
   }
   .signup-form{
    width: 350px;
    background-color:rgb(97, 29, 86);
-   height: 480px;
+   height: 550px;
    float: left;
    position: relative;
-   border-radius: 25px;
    box-shadow: inset 0 0 15px rgb(0, 0, 0);
-  
+   margin-left: 50%;
+   margin-top: -40.5%;
   }
   .register-form{
     background-color:rgb(97, 29, 86);
     padding-left: 15%;
     padding-right: 25%;
-    height: 350px;
+    height: 430px;
     width: 300px;
     margin: 0 auto;
     margin-top: 20px;
     padding-top: 20px;
     padding-bottom: 15px;
-    border-radius: 25px;
+    
     box-shadow:  inset 0 0 15px rgb(0, 0, 0);
   }
   .form-group{
     background-color: rgb(0, 0, 0);
     height: 30px;
     width: 200px;
-    border-radius: 30px;
+    margin-top: 15px;
     text-align: center;
     box-shadow:  0 0 15px rgb(0, 0, 0);
   }
@@ -49,7 +46,7 @@
     border: none;
     width: 160px;
     height:25px ;
-    border-radius: 30px;
+   
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
@@ -81,4 +78,8 @@
     text-align: center;
     padding-left: 50px;
   }
-  
+  .signup-page img{
+    margin-left: 22%;
+    height: 550px;
+    opacity: 0.5;
+  }
