--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,52 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 .footer-page{
-    min-height: 50vh;
+    min-height: 40vh;
     border: 15px black;
-    background-color: rgb(117, 11, 76);
-}
-.footer-links ul li {
-    display: inline-block;
-    font-family:sans-serif;
-    font-size: 20px;
-    padding: 45px;
-  
+    background-color: rgb(97, 29, 86)
 }
 .footer-links a{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: white;   
+    font-weight: bolder;
 }
 .footer-links a:hover{
-    color: rgb(222, 165, 233);
+    color: rgb(0, 0, 0);
 }
-.foot-icon li{
-  display: inline-block;
-  padding: 45px;
-  font-size: 25px;
-  margin-top: -55px;
+.footer-links ul{
+    list-style-type: none;
+    
 }
-.foot-icon {
-    margin-top: -20px;
+.footer-links ul li{
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-inline-end:90px;
+    display: inline-block;
 }
-.foot-icon a {
+.footer-links{
+    padding-top: 45px;
+    margin-left: 300px;
+}
+.foot-icon{
+    margin-left: 450px;
+}
+.foot-icon ul li{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    display: inline-block;
+    padding-inline-end: 150px;
+    margin-top: 25px;
 }
-.footer-icon a li:hover{
-    color: rgb(222, 165, 233);
+.foot-icon ul li i{
+    font-size: 25px;
+    text-align: center;
+    font-weight: bolder;
 }
-.footer-privacy{
-    margin-top: -55px;
+.foot-icon ul li i:hover{
+    color: black;
+}
+.footer-privacy ul li{
+    text-decoration: none;
+    display: inline-block;
+    padding-inline-end: 100px;
 }
 .footer-privacy a{
+    color: white;
     text-decoration: none;
-    color: rgb(255, 255, 255);
-    padding-top: -15%;
+    font-weight: bolder;
 }
-.footer-privacy li{
-    display: inline-block;
-    padding: 15px;
-    font-size: 15px;
-  }
-  .footer-privacy a:hover{
-    color: rgb(222, 165, 233);
+.footer-privacy{
+    margin-left: 450px;
+    margin-top: 35px;
+}
+.footer-privacy ul li a:hover{
+    color: black;
 }
