--- a/src/components/application/application.css
+++ b/src/components/application/application.css
@@ -53,6 +53,7 @@
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
+    outline: none;
   }
   .application-group input[type="file"]{
     display: none;
