--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -46,7 +46,7 @@
     border: none;
     width: 160px;
     height:25px ;
-   
+    outline: none;
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
