--- a/src/components/parlour/parlour.css
+++ b/src/components/parlour/parlour.css
@@ -24,6 +24,7 @@
 .parlour-page h2{
     text-align: center;
     font-size: 25px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     color: rgb(116, 5, 116);
+    font-weight: bolder;
 }
