--- a/src/components/appoinment/appoinment.css
+++ b/src/components/appoinment/appoinment.css
@@ -1,23 +1,23 @@
-.booking-page{
+.appoinmment-page{
     min-height: 100vh;
     display: 100%;
     margin: 0%;
     padding: 0%;
   }
-  .booking-content{
+  .appoinmment-content{
     position: absolute;
     margin: auto;
     margin-top: 5%;
     margin-left: 20%;  
   }
-  .booking-title{
+  .appoinmment-title{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
     text-align: center;
     color: rgb(255, 255, 255);
     padding-top: 20px;
   }
-  .booking-form{
+  .appoinmment-form{
    width: 800px;
    background-color:rgb(97, 29, 86);
    height: 450px;
@@ -27,7 +27,7 @@
    margin: 0% auto;
    position: relative;
   }
-  .booking-register{
+  .appoinmment-register{
     background-color:rgb(97, 29, 86);
     padding-left: 15%;
     padding-right: 25%;
@@ -39,14 +39,14 @@
     padding-bottom: 15px;
     box-shadow:  inset 0 0 15px rgb(0, 0, 0);
   }
-  .booking-group{
+  .appoinmment-group{
     background-color: rgb(0, 0, 0);
     height: 30px;
     width: 500px;
     text-align: center;
     box-shadow:  0 0 15px rgb(0, 0, 0);
   }
-  .booking-group input{
+  .appoinmment-group input{
     border: none;
     width: 400px;
     height:25px ;
