--- a/src/components/exparlour/exparlour.css
+++ b/src/components/exparlour/exparlour.css
@@ -36,11 +36,16 @@
     margin-top: 20px;
     
 }
+.packages p{
+    font-family:'Raleway', sans-serif;
+    color:purple;
+}
 .packages h3{
     text-align: center;
     font-size: 45px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: bolder;
+    color:blueviolet;
 }
 .parl{
     margin-left: 65px;
@@ -57,17 +62,18 @@
 }
 .parl p{
     text-align: center;
-    color: rgb(136, 136, 136);
+    color: rgb(82, 45, 116);
     font-size: 25px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Raleway', sans-serif;
     margin-top: 25px;
+    font-weight: bolder;
 }
 .parl input{
     display: inline-block;
 }
 .apmnt{
    height: 55px;
-   width: 150px;
+   width: 152px;
    border-color:purple ;
    color: purple;
 }
@@ -77,17 +83,18 @@ input.apmnt:hover{
 }
 .bk  {
    height: 55px;
-   width: 150px;
-   border-color: rgb(212, 142, 11);
-   color: rgb(212, 142, 11);
+   width: 152px;
+   border-color: rgb(0, 0, 0);
+   color: rgb(0, 0, 0);
+   
 }
 input.bk:hover{
-    background-color: rgb(212, 142, 11);
+    background-color: rgb(0, 0, 0);
     color: #ffffff;
 }
 .parl-disc {
     text-align: center;
     font-size: 20px;
-    font-family: fantasy;
+    font-family:'Cinzel Decorative', cursive;
    
 }
