--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   }
   .signup-title{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Cinzel Decorative',cursive;
     font-size: 40px;
     text-align: center;
     color: rgb(255, 255, 255);
