--- a/src/components/application/application.css
+++ b/src/components/application/application.css
@@ -1,5 +1,5 @@
 .application-page{
-    min-height: 240vh;
+    min-height: 300vh;
     display: 100%;
     margin: 0%;
     padding: 0%;
@@ -11,7 +11,7 @@
     margin-left: 20%;  
   }
   .application-title{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Cinzel Decorative',cursive;
     font-size: 40px;
     text-align: center;
     color: rgb(255, 255, 255);
@@ -19,19 +19,19 @@
   }
   .application-form{
    width: 800px;
-   background-color:rgb(97, 29, 86);
-   height: 500px;
+   background-color:rgb(187, 76, 169);
+   height: 780px;
    float: left;
-   position: absolute;
+   position: relative;
    box-shadow: inset 0 0 15px rgb(0, 0, 0);
    margin: 0% auto;
    position: relative;
   }
   .application-register{
-    background-color:rgb(97, 29, 86);
+    background-color:rgb(187, 76, 169);
     padding-left: 15%;
     padding-right: 25%;
-    height: 450px;
+    height: 650px;
     width: 700px;
     margin: 0 auto;
     margin-top: 20px;
@@ -41,22 +41,25 @@
   }
   .application-group{
     background-color: rgb(0, 0, 0);
-    height: 30px;
+    height: 55px;
     width: 500px;
     text-align: center;
     box-shadow:  0 0 15px rgb(0, 0, 0);
+    
   }
   .application-group input{
     border: none;
     width: 400px;
-    height:25px ;
+    height:50px ;
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
     outline: none;
+    padding :15px;
   }
   .application-group input[type="file"]{
     display: none;
+    padding: 15px;
   }
   .bd {
     background-color: rgb(0, 0, 0);
@@ -89,11 +92,11 @@
   }
   .application-forme{
     width: 800px;
-    background-color:rgb(97, 29, 86);
-    height: 600px;
+    background-color:rgb(187, 76, 169);
+    height: 800px;
     float: left;
     position: absolute;
     box-shadow: inset 0  0 15px rgb(0, 0, 0);
     position: relative;
-    
+    margin-top: -50px;
    }
