--- a/src/components/exparlour/exparlour.css
+++ b/src/components/exparlour/exparlour.css
@@ -12,6 +12,9 @@
 .exparlour{
     margin-left:90px;
 }
+.packages h3{
+    color: rgb(255, 30, 30);
+}
 .ex-img-txt{
     text-align: center;
     margin-top: -150px;
@@ -22,12 +25,14 @@
     font-size: 55px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bolder;
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
  
 }
 .ex-img-txt p{
     font-size: 35px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(224, 127, 0);
+    color: rgb(124, 124, 124);
+    -webkit-text-stroke: 2px rgb(255, 255, 255);
 }
 .packages ul li{
     display: inline-block;
@@ -48,13 +53,17 @@
     color:blueviolet;
 }
 .parl{
-    margin-left: 65px;
+    margin-left: 35px;
     padding: 25px;
 }
 .Par{
     height: 300px;
     width: 300px;
     transition: transform 1s;
+    box-shadow: 10px 10px 5px #ccc;
+    -moz-box-shadow: 10px 10px 5px #ccc;
+    -webkit-box-shadow: 10px 10px 5px #ccc;
+    -khtml-box-shadow: 10px 10px 5px #ccc;
 }
 .Par:hover{
     opacity: 0.5;
@@ -96,5 +105,9 @@ input.bk:hover{
     text-align: center;
     font-size: 20px;
     font-family:'Cinzel Decorative', cursive;
-   
+}
+.parl ul li{
+    margin-left: -35px;
+    width: 200px;
+    margin-right: -15px;
 }
