--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -63,9 +63,18 @@ input.our-services-but:hover{
   height: 350px;
   margin-left: -20px;
   border-color: black;
+  box-shadow: 100px solid black;
 }
 .ser img{
-  border: 8px solid rgb(121, 15, 115);
+  border:5px solid rgb(121, 15, 115);
+  box-shadow: 10px 10px 5px #ccc;
+      -moz-box-shadow: 10px 10px 5px #ccc;
+      -webkit-box-shadow: 10px 10px 5px #ccc;
+      -khtml-box-shadow: 10px 10px 5px #ccc;
+      transition: 1s;
+}
+.ser img:hover{
+  transform: scale(0.9);
 }
 
 .ser h1{
@@ -158,7 +167,10 @@ input.appo:hover{
     margin-right: auto;
     display: block;
     margin-top:-460px;
+    box-shadow: 10px 10px 5px #ccc;
+
 }
+
 .our-services-button{
   margin-top: 40px;
   height: 70px;
