--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -6,7 +6,7 @@
   margin: 0 auto;
   }
   .login-title{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Cinzel Decorative',cursive;
     font-size: 40px;
     text-align: center;
     color: rgb(255, 255, 255);
@@ -27,17 +27,16 @@
     background-color:rgb(97, 29, 86);
     padding-left: 15%;
     padding-right: 25%;
-    height: 230px;
+    height: 280px;
     width: 280px;
     margin: 0 auto;
     padding-top: 20px;
     padding-bottom: 15px;
-
     box-shadow:  inset 0 0 15px rgb(0, 0, 0);
   }
   .formgroup{
     background-color: rgb(0, 0, 0);
-    height: 30px;
+    height: 55px;
     width: 200px;
     margin-top: 15px;
     text-align: center;
@@ -46,11 +45,12 @@
   .formgroup input{
     border: none;
     width: 160px;
-    height:25px ;
+    height:50px ;
     outline: none;
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
+    padding:15px;
   }
   .formgroup input :placeholder{
    text-emphasis-color:   rgb(0, 0, 0);
