--- a/src/components/tips/tips.css
+++ b/src/components/tips/tips.css
@@ -3,7 +3,7 @@
 }
 header h1{
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Cinzel Decorative',cursive;
     color: rgb(121, 15, 115);
 }
 .tips-body{
@@ -22,7 +22,7 @@ header h1{
     padding: 25px;
     font-size: 20px;
     margin-top: 45px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Cinzel Decorative',cursive;
     color: rgb(255, 255, 255);
     opacity: 0.8;
 }
@@ -32,6 +32,7 @@ header h1{
     margin-left: 5px;
     margin-top: -50px;
     padding-right: 25px;
+    
 
 }
 .tips-body ul li{
@@ -49,6 +50,7 @@ header h1{
 .line2 ul li{
     display: inline-block;
     text-decoration: none;
+   
 }
 .tips-p1{
     width: 600px;
@@ -57,7 +59,7 @@ header h1{
     padding: 25px;
     font-size: 20px;
     margin-top: 45px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Cinzel Decorative',cursive;
     color: rgb(121, 15, 115);
     opacity: 0.8;
     border-color:rgb(121, 15, 115);
@@ -72,4 +74,5 @@ header h1{
     margin-left: 50px;
     margin-top: -400px;
     padding-right: 25px;
+  
 }
