--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -13,7 +13,7 @@
   }
   .signup-form{
    width: 350px;
-   background-color:rgb(97, 29, 86);
+   background-color:rgb(110, 20, 80);
    height: 550px;
    float: left;
    position: relative;
@@ -22,7 +22,7 @@
    margin-top: -40.5%;
   }
   .register-form{
-    background-color:rgb(97, 29, 86);
+    background-color:rgb(99, 48, 79);
     padding-left: 15%;
     padding-right: 25%;
     height: 430px;
@@ -34,7 +34,7 @@
     
     box-shadow:  inset 0 0 15px rgb(0, 0, 0);
   }
-  .form-group{
+  .forme-group{
     background-color: rgb(0, 0, 0);
     height: 30px;
     width: 200px;
@@ -42,7 +42,7 @@
     text-align: center;
     box-shadow:  0 0 15px rgb(0, 0, 0);
   }
-  .form-group input{
+  .forme-group input{
     border: none;
     width: 160px;
     height:25px ;
@@ -51,10 +51,10 @@
     background-color: rgb(0, 0, 0);
     color: aliceblue;
   }
-  .form-group input :placeholder{
+  .forme-group input :placeholder{
    text-emphasis-color:   rgb(0, 0, 0);
   }
-  .form-group input :hover{
+  .forme-group input :hover{
     background-color: rgb(0, 0, 0);
     border: none;
   }
